flux/base/podinfo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: podinfo
spec:
  type: ClusterIP
  ports:
    - port: 9898
      targetPort: 9898
  selector:
    app: podinfo
